--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <div class="section__text">
       <p class="section__text__p1">Hello, We are</p>
       <h1 class="title">Labnetic Solutions</h1>
-      <p class="section__text__p2">Complete Digital Solution Partner</p>
+      <p class="section__text__p2">Complete Digital/Marketing Solution Partner</p>
       <div class="btn-container">
         
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -48,20 +48,14 @@
             />
           </div>
           <h2 class="experience-sub-title project-title">Ethical Hacking</h2>
-          <h4 class="experience-sub-title project-title">Project One</h4>
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/'"
             >
-              Github
+              Learn More>>
             </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
-            </button>
+          
           </div>
         </div>
 
@@ -79,13 +73,7 @@
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/'"
             >
-              Github
-            </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
+              Learn More>>
             </button>
           </div>
         </div>
@@ -103,40 +91,11 @@
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/'"
             >
-              Github
-            </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
+              Learn More>>
             </button>
           </div>
         </div>
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="../../../assets/img/socialmedia/robotics.jpg"
-              alt="Project 1"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Robotics</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Github
-            </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
-            </button>
-          </div>
-        </div>
+        
         <div class="details-container color-container">
           <div class="article-container">
             <img
@@ -151,13 +110,7 @@
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/'"
             >
-              Github
-            </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
+              Learn More>>
             </button>
           </div>
         </div>
@@ -175,13 +128,7 @@
               class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/'"
             >
-              Github
-            </button>
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Live Demo
+              Learn More>>
             </button>
           </div>
         </div>
@@ -195,8 +142,8 @@
     />
   </section>
   <section id="experience">
-    <p class="section__text__p1">Explore Our Services</p>
-    <h1 class="title">Service</h1>
+    <p class="section__text__p1">What you will learn</p>
+    <h1 class="title">Courses</h1>
     <div class="experience-details-container">
       <div class="about-containers">
         <div class="details-container">
@@ -251,7 +198,7 @@
         </div>
         
         <div class="details-container">
-          <h2 class="experience-sub-title">Ethical Hacking</h2>
+          <h2 class="experience-sub-title">Angular</h2>
           <div class="article-container">
             <article>
               <img
@@ -260,7 +207,7 @@
                 class="icon"
               />
               <div>
-                <h3>Linux</h3>
+                <h3>Angular Basics</h3>
                 <p>Experienced</p>
               </div>
             </article>
@@ -271,7 +218,7 @@
                 class="icon"
               />
               <div>
-                <h3>Phishing</h3>
+                <h3>Creating Angular application</h3>
                 <p>Experienced</p>
               </div>
             </article>
@@ -282,7 +229,7 @@
                 class="icon"
               />
               <div>
-                <h3>Burpsuit</h3>
+                <h3>Components & Behaviour</h3>
                 <p>Intermediate</p>
               </div>
             </article>
@@ -293,7 +240,7 @@
                 class="icon"
               />
               <div>
-                <h3>Cross Site Scripting</h3>
+                <h3>Deploying</h3>
                 <p>Intermediate</p>
               </div>
             </article>
@@ -301,7 +248,7 @@
           </div>
         </div>
         <div class="details-container">
-          <h2 class="experience-sub-title">Ethical Hacking</h2>
+          <h2 class="experience-sub-title">Springboot</h2>
           <div class="article-container">
             <article>
               <img
@@ -310,7 +257,7 @@
                 class="icon"
               />
               <div>
-                <h3>Linux</h3>
+                <h3>Introduction to Spring</h3>
                 <p>Experienced</p>
               </div>
             </article>
@@ -321,7 +268,7 @@
                 class="icon"
               />
               <div>
-                <h3>Phishing</h3>
+                <h3>Creating new spring application</h3>
                 <p>Experienced</p>
               </div>
             </article>
@@ -332,7 +279,7 @@
                 class="icon"
               />
               <div>
-                <h3>Burpsuit</h3>
+                <h3>Spring Data JPA</h3>
                 <p>Intermediate</p>
               </div>
             </article>
@@ -343,16 +290,17 @@
                 class="icon"
               />
               <div>
-                <h3>Cross Site Scripting</h3>
+                <h3>Deploying</h3>
                 <p>Intermediate</p>
               </div>
             </article>
+            
             
           </div>
         </div>
         
         <div class="details-container">
-          <h2 class="experience-sub-title">Full Stack Development</h2>
+          <h2 class="experience-sub-title">3D Animation/ UI-UX</h2>
           
           <div class="article-container">
             <article>
