--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,397 +1,26 @@
 <app-header></app-header>
+
 <section id="profile">
     <div class="section__pic-container">
-      <img src="../../../assets/img/logo/LOGO-BG.png" alt="Labnetic Solutions profile picture" />
+      <img src="../../assets/img/logo/LOGO-BG.png" alt="Labnetic Logo" />
     </div>
     <div class="section__text">
-      <p class="section__text__p1">Hello, We are</p>
+      <p class="section__text__p1">Welcome To</p>
       <h1 class="title">Labnetic Solutions</h1>
-      <p class="section__text__p2">Complete Digital/Marketing Solution Partner</p>
+      <p class="section__text__p2">Where you can find your digital solution</p>
       <div class="btn-container">
-        
+        <button
+          class="btn btn-color-2"
+          onclick="window.open('./assets/resume-example.pdf')"
+        >
+          Know More
+        </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
           Contact Info
         </button>
       </div>
-      <div id="socials-container">
-        <img
-          src="../../../assets/img/socialmedia/linkedin.png"
-          alt="My LinkedIn profile"
-          class="icon"
-          onclick="location.href='https://linkedin.com/'"
-        />
-        <img
-          src="../../../assets/img/socialmedia/github.png"
-          alt="My Github profile"
-          class="icon"
-          onclick="location.href='https://github.com/'"
-        />
-      </div>
+      
     </div>
   </section>
-
-  <app-about></app-about>
-
-  
-  
-  <section id="projects">
-    <p class="section__text__p1">Here are our services</p>
-    <h1 class="title">Services</h1>
-    <div class="experience-details-container">
-      <div class="about-containers">
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="../../../assets/img/socialmedia/ethicalHacking.jpg"
-              alt="Project 1"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Ethical Hacking</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Learn More>>
-            </button>
-          
-          </div>
-        </div>
-
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="../../../assets/img/socialmedia/angular.png"
-              alt="Project 1"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Angular</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Learn More>>
-            </button>
-          </div>
-        </div>
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="../../../assets/img/socialmedia/springboot.png"
-              alt="Project 1"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Spring Boot</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Learn More>>
-            </button>
-          </div>
-        </div>
-        
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="../../../assets/img/socialmedia/project-2.png"
-              alt="Project 2"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">UI/UX</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Learn More>>
-            </button>
-          </div>
-        </div>
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="../../../assets/img/socialmedia/project-3.png"
-              alt="Project 3"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">3D Animation</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/'"
-            >
-              Learn More>>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <img
-      src="../../../assets/img/socialmedia/arrow.png"
-      alt="Arrow icon"
-      class="icon arrow"
-      onclick="location.href='./#contact'"
-    />
-  </section>
-  <section id="experience">
-    <p class="section__text__p1">What you will learn</p>
-    <h1 class="title">Courses</h1>
-    <div class="experience-details-container">
-      <div class="about-containers">
-        <div class="details-container">
-          <h2 class="experience-sub-title">Ethical Hacking</h2>
-          <div class="article-container">
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Linux</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Phishing</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Burpsuit</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Cross Site Scripting</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            
-          </div>
-        </div>
-        
-        <div class="details-container">
-          <h2 class="experience-sub-title">Angular</h2>
-          <div class="article-container">
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Angular Basics</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Creating Angular application</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Components & Behaviour</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Deploying</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            
-          </div>
-        </div>
-        <div class="details-container">
-          <h2 class="experience-sub-title">Springboot</h2>
-          <div class="article-container">
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Introduction to Spring</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Creating new spring application</h3>
-                <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Spring Data JPA</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Deploying</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            
-            
-          </div>
-        </div>
-        
-        <div class="details-container">
-          <h2 class="experience-sub-title">3D Animation/ UI-UX</h2>
-          
-          <div class="article-container">
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>PostgreSQL</h3>
-                <p>Basic</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Node JS</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Express JS</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img
-                src="../../../assets/img/socialmedia/checkmark.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <div>
-                <h3>Git</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-          </div>
-        </div>
-      </div>
-    </div>
-    <img
-      src="../../../assets/img/socialmedia/arrow.png"
-      alt="Arrow icon"
-      class="icon arrow"
-      onclick="location.href='./#projects'"
-    />
-  </section>
- <br><br>
-  <section id="contact">
-    <p class="section__text__p1">Get in Touch</p>
-    <h1 class="title">Contact Me</h1>
-    <div class="contact-info-upper-container">
-      <div class="contact-info-container">
-        <img
-          src="../../../assets/img/socialmedia/email.png"
-          alt="Email icon"
-          class="icon contact-icon email-icon"
-        />
-        <p><a href="mailto:examplemail@gmail.com">Email</a></p>
-      </div>
-      <div class="contact-info-container">
-        <img
-          src="../../../assets/img/socialmedia/linkedin.png"
-          alt="LinkedIn icon"
-          class="icon contact-icon"
-        />
-        <p><a href="https://www.linkedin.com">LinkedIn</a></p>
-      </div>
-    </div>
-  </section>
-  <footer>
-    <nav>
-      <div class="nav-links-container">
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-    <p>Copyright &#169; 2024 Labnetic Solutions. All Rights Reserved.</p>
-  </footer>
-  <script src="script.js"></script>
+  <script src="../../assets/script/script.js"></script>
+<app-about></app-about>
