--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    
-  </head>
-  <body>
+  <div class="body">
     <nav id="desktop-nav">
       <div class="logo">Labnetic Solutions</div>
       <div>
         <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="services">Services</a></li>
+          <li><a href="Courses">Courses</a></li>
+          <li><a href="contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -28,14 +19,11 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" (click)="toggleMenu()">About</a></li>
-          <li><a href="#experience" (click)="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" (click)="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" (click)="toggleMenu()">Contact</a></li>
+          <li><a href="about" (click)="toggleMenu()">About</a></li>
+          <li><a href="services" (click)="toggleMenu()">Services</a></li>
+          <li><a href="courses" (click)="toggleMenu()">Courses</a></li>
+          <li><a href="contact" (click)="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
-    
-    <script src="script.js"></script>
-  </body>
-</html>
+  </div>
