--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,4 +1,4 @@
-
+<section id="services"></section>
 <div class="body">
     <div class="container">
         <h1 class="container-header">Our Services</h1>
@@ -54,3 +54,5 @@
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
