--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
       <div class="btn-container">
         <button
           class="btn btn-color-2"
-          onclick="window.open('./assets/resume-example.pdf')"
+          onclick="location.href='./#about'"
         >
           Know More
         </button>
