--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,27 @@
-<p>footer works!</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<footer>
+    <div class="footerContainer">
+        <div class="socialIcons">
+            <a href="">
+                <i class="fa-brands fa-facebook"></i>
+            </a><a href="">
+                <i class="fa-brands fa-google"></i>
+            </a><a href="">
+                <i class="fa-brands fa-instagram"></i>
+            </a><a href="">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </div>
+        <div class="footerNav">
+            <ul>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footerBottom">
+        <p>Copy rights &copy; 2021 Labnetic Solutions. All rights reserved.<br /></p> 
+     </div>
+</footer>
