--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,8 +3,8 @@
       <div class="logo">Labnetic Solutions</div>
       <div>
         <ul class="nav-links">
-          <li><a href="about">About</a></li>
-          <li><a href="services">Services</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
           <li><a href="Courses">Courses</a></li>
           <li><a href="contact">Contact</a></li>
         </ul>
@@ -19,10 +19,10 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="about" (click)="toggleMenu()">About</a></li>
-          <li><a href="services" (click)="toggleMenu()">Services</a></li>
-          <li><a href="courses" (click)="toggleMenu()">Courses</a></li>
-          <li><a href="contact" (click)="toggleMenu()">Contact</a></li>
+          <li><a href="#about" (click)="toggleMenu()">About</a></li>
+          <li><a href="#services" (click)="toggleMenu()">Services</a></li>
+          <li><a href="#courses" (click)="toggleMenu()">Courses</a></li>
+          <li><a href="#contact" (click)="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
