--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -1,7 +1,7 @@
 <!--==================== UNICONS ====================-->
+<section id="pricing"></section>
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
 <div class="body">
-   
     <div class="pricing-body">
         <h2 class="pricing-header">What you will learn</h2>
         <section class="card container grid">
