--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -10,7 +10,7 @@
                     <!--<span class="card__description">Vancouver Mountains, Canada </span>-->
                     
                     <h2 class="card__title">Ethical Hacking</h2>
-                    <a href="#" class="card__button">Read More</a>
+                    <a href="#pricing" class="card__button">Read More</a>
                 </div>
             </article>
 
@@ -20,7 +20,7 @@
                 <div class="card__data">
                     
                     <h2 class="card__title">Angular</h2>
-                    <a href="#" class="card__button">Read More</a>
+                    <a href="#pricing" class="card__button">Read More</a>
                 </div>
             </article>
 
@@ -30,7 +30,7 @@
                 <div class="card__data">
                     
                     <h2 class="card__title">SpringBoot</h2>
-                    <a href="#" class="card__button">Read More</a>
+                    <a href="#pricing" class="card__button">Read More</a>
                 </div>
             </article>
             <article class="card__article">
@@ -39,7 +39,7 @@
                 <div class="card__data">
                     
                     <h2 class="card__title">Animation</h2>
-                    <a href="#" class="card__button">Read More</a>
+                    <a href="#pricing" class="card__button">Read More</a>
                 </div>
             </article>
             <article class="card__article">
@@ -48,7 +48,7 @@
                 <div class="card__data">
                     
                     <h2 class="card__title">UI/UX</h2>
-                    <a href="#" class="card__button">Read More</a>
+                    <a href="#pricing" class="card__button">Read More</a>
                 </div>
             </article>
         </div>
