--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -17,6 +17,7 @@
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#pricing">Courses</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </div>
