--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="Courses">Courses</a></li>
+          <li><a href="#pricing">Courses</a></li>
           <li><a href="contact">Contact</a></li>
         </ul>
       </div>
@@ -21,7 +21,7 @@
         <div class="menu-links">
           <li><a href="#about" (click)="toggleMenu()">About</a></li>
           <li><a href="#services" (click)="toggleMenu()">Services</a></li>
-          <li><a href="#courses" (click)="toggleMenu()">Courses</a></li>
+          <li><a href="#pricing" (click)="toggleMenu()">Courses</a></li>
           <li><a href="#contact" (click)="toggleMenu()">Contact</a></li>
         </div>
       </div>
