changing the picing componrnt button

--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -48,7 +48,7 @@
                         </li>
                     </ul>
 
-                    <button class="card__button">Choose this plan</button>
+                    <button class="card__button">Get this Course</button>
                 </article>
 
                 <!--==================== CARD 2 ====================-->
@@ -92,7 +92,7 @@
                         </li>
                     </ul>
 
-                    <button class="card__button">Choose this plan</button>
+                    <button class="card__button">Get this Course</button>
                 </article>
 
                 <!--==================== CARD 3 ====================-->
@@ -136,7 +136,7 @@
                         </li>
                     </ul>
 
-                    <button class="card__button">Choose this plan</button>
+                    <button class="card__button">Get this Course</button>
                 </article>
                 <!--==================== CARD 4 ====================-->
                 <article class="card__content grid">
@@ -179,7 +179,7 @@
                         </li>
                     </ul>
 
-                    <button class="card__button">Choose this plan</button>
+                    <button class="card__button">Get this Course</button>
                 </article>
                 <!--==================== CARD 5 ====================-->
                 <article class="card__content grid">
@@ -218,7 +218,7 @@
                         </li>
                     </ul>
 
-                    <button class="card__button">Choose this plan</button>
+                    <button class="card__button">Get this Course</button>
                 </article>
             </div>
         </section>
